package com.zayver.parcial.bridge.encrypt;

public interface IEncrypt {
    String encrypt(String message, String password) throws Exception;
}
